# llama-cpp-ui

./: .gitmodules  README.md
frontend/: craco.config.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  AutoScrollWrapper.js  Conversation.js  ConversationStep.css  ConversationStep.js  EmptyConversation.css  EmptyConversation.js  InputBox.css  InputBox.js  Intro.css  Intro.js  StreamingMarkdown.css  StreamingMarkdown.js  TopBar.css  TopBar.js  index.css
server/: CMakeLists.txt  llamalib.cpp  llamalib.h  webapi.cpp  webapi.h  webutils.cpp  webutils.h
